@@ -1,7 +1,11 @@
 Change Log
 
-== MMC 0.5 (Unfinished) development branch, Qianqian Fang <fangq@nmr.mgh.harvard.edu> ==
+== MMC 0.4 (Pecan Pie) development branch, Qianqian Fang <fangq@nmr.mgh.harvard.edu> ==
 
+2010/12/13 fixed negative time difference by promoting time counter from int to long
+2010/12/13 fixed diminishing absorption fraction by using a double accumulator
+2010/12/12 added initial support for SFMT RNG, speed and accuracy need further optimization
+2010/12/11 included RNG C units in the main code to enable static inlining
 2010/12/04 initial doxygen support for automatic documentation
 2010/12/04 support llvm-gcc, icc and tcc via "make target CC=compiler"
 2010/12/03 speed up gcc-compiled binary by 2x with fast exponential
